src/styles/about.scss
@import 'base';
$spacing: 20px;

.about-page {
  padding-left: 10px;
  padding-right: 10px;
  @include media('>=tablet') {
    padding-left: 0;
    padding-right: 0;
  }
  .about-container {
    max-width: 1280px;
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    .banner-wrapper {
      border-bottom: 15px solid $blue;
      @include media('>=tablet') {
        border-bottom: none;
      }
      .banner-image {
        height: 200px;
        @include media('>=tablet') {
          height: auto;
          max-height: 340px;
          border-bottom: 15px solid $blue;
        }
        img {
          max-height: 325px;
        }
        .graphcms-image-outer-wrapper,
        .graphcms-image-wrapper {
          max-height: inherit;
        }
      }
    }
    .brands-container {
      .brands {
        display: flex;
        flex: 1;
        flex-direction: row;
        align-items: center;
        justify-content: center;
        padding-top: 10px;
        padding-bottom: 10px;
        flex-wrap: wrap;
        .almex-box,
        .bat,
        .cmi,
        .emsys,
        .fusion,
        .institute,
        .knight,
        .lightweight,
        .votech {
          margin: 15px 20px;
          a {
            // opacity: 0.8;
            display: inline-block;
            &:hover {
              opacity: 1;
            }
          }
        }
        .almex-box a {
          background-image: url('../../static/img/logo-almex-box.png');
          background-size: cover;
          width: calc(135px * 0.6);
          height: calc(46px * 0.6);
          background-position-y: calc(-46px * 0.6);
          @include media('>=tablet') {
            width: 135px;
            height: 48px;
            background-position-y: -46px;
          }
        }
        .bat a {
          background-image: url('../../static/img/logo-bat.png');
          background-size: cover;
          width: calc(110px * 0.6);
          height: calc(70px * 0.6);
          background-position-y: calc(-70px * 0.6);
          @include media('>=tablet') {
            width: 110px;
            height: 70px;
            background-position-y: -66px;
          }
        }
        .lightweight a {
          background-image: url('../../static/img/logo-lightweight.png');
          background-size: cover;
          width: calc(125px * 0.6);
          height: calc(53px * 0.6);
          background-position-y: calc(-53px * 0.59);
          @include media('>=tablet') {
            width: 125px;
            height: 55px;
            background-position-y: -53px;
          }
        }
        .cmi a {
          background-image: url('../../static/img/logo-cobra.png');
          background-size: cover;
          width: calc(110px * 0.6);
          height: calc(67px * 0.6);
          background-position-y: calc(-67px * 0.6);
          @include media('>=tablet') {
            width: 110px;
            height: 67px;
            background-position-y: -67px;
          }
        }
        .emsys a {
          background-image: url('../../static/img/logo-emsys.png');
          background-size: cover;
          width: calc(135px * 0.6);
          height: calc(38px * 0.6);
          background-position-y: calc(-38px * 0.6);
          @include media('>=tablet') {
            width: 135px;
            height: 38px;
            background-position-y: -38px;
          }
        }
        .fusion a {
          background-image: url('../../static/img/logo-fusion.png');
          background-size: cover;
          width: calc(154px * 0.6);
          height: calc(35px * 0.6);
          background-position-y: calc(-35px * 0.6);
          @include media('>=tablet') {
            width: 154px;
            height: 39px;
            background-position-y: -35px;
          }
        }
        .institute a {
          background-image: url('../../static/img/logo-institute.png');
          background-size: cover;
          width: calc(100px * 0.6);
          height: calc(84px * 0.6);
          background-position-y: calc(-84px * 0.6);
          @include media('>=tablet') {
            width: 100px;
            height: 86px;
            background-position-y: -84px;
          }
        }
        .knight a {
          background-image: url('../../static/img/logo-knight.png');
          background-size: cover;
          width: calc(125px * 0.6);
          height: calc(67px * 0.6);
          background-position-y: calc(-67px * 0.6);
          @include media('>=tablet') {
            width: 125px;
            height: 69px;
            background-position-y: -67px;
          }
        }
        .votech a {
          background-image: url('../../static/img/logo-votech.png');
          background-size: cover;
          width: calc(179px * 0.6);
          height: calc(66px * 0.6);
          background-position-y: calc(-66px * 0.59);
          @include media('>=tablet') {
            width: 179px;
            height: 66px;
            background-position-y: -66px;
          }
        }
      }
    }
    .intro-container {
      display: flex;
      margin-top: 40px;
      flex-direction: column;
      @include media('>=desktop') {
        flex-direction: row;
      }
      .intro-content {
        width: 100%;
        @include media('>=desktop') {
          width: 60%;
          padding-left: 20px;
          padding-right: 20px;
        }
        .title {
          font-size: 30px;
          color: $prussian-blue;
          font-weight: 700;
        }
        .description {
          font-size: 24px;
          line-height: normal;
        }
      }
      .links {
        display: flex;
        flex-direction: row;
        width: 100%;
        @include media('>=desktop') {
          width: 40%;
          padding-right: 20px;
        }
        .label {
          font-size: 24px;
          color: white;
          line-height: normal;
        }
        .resources,
        .about-links {
          ul {
            margin-left: 0;
            list-style-type: none;
            li {
              color: $yellow-sea;
              overflow: visible;
              padding-left: 10px;
              position: relative;
              font-size: 32px;
              line-height: 15px;
              margin-bottom: 20px;
              &:before {
                content: '\00BB';
                left: 0;
                top: 4px;
                position: absolute;
              }
              a {
                display: inline-block;
                color: $white;
                text-decoration: none;
                transition: $easeinout;
                margin-left: 15px;
                font-size: 15px;
                line-height: 100%;
                &:hover {
                  color: $yellow-sea;
                  text-decoration: underline;
                }
              }
            }
          }
        }
        .resources {
          display: table;
          width: 50%;
          background-color: $grey80;
          padding: 20px;
          @include media('>=desktop') {
            width: 45%;
          }
          .label {
            color: $white;
            padding-bottom: 20px;
          }
        }
        .about-links {
          width: calc(50% - 10px);
          margin-left: 10px;
          @include media('>=desktop') {
            width: calc(55% - 10px);
          }
          .label {
            background-color: $blue;
            padding: 20px;
          }
          ul {
            li {
              border-bottom: 1px solid $black;
              margin-top: 10px;
              padding-bottom: 20px;
              &:first-of-type {
                margin-top: 20px;
              }
              &:before {
                left: 20px;
                top: 3px;
              }
              a {
                color: $grey80;
                font-size: 20px;
                margin-left: 35px;
              }
            }
          }
        }
      }
    }
  }
}

